# VST3FlaschenTaschen

./: .gitignore  SESSION_NOTES.md
.claude/: settings.local.json
FlaschenTaschen/: CMakeLists.txt
FlaschenTaschen/examples/: example_mapping.xml  example_with_effects.xml
FlaschenTaschen/resource/: myplugineditor.uidesc
FlaschenTaschen/source/: BitmapFont.cpp  BitmapFont.h  ESpeakSynthesizer.cpp  ESpeakSynthesizer.h  FlaschenTaschenClient.cpp  FlaschenTaschenClient.h  MappingConfig.cpp  MappingConfig.h  VisualEffects.cpp  VisualEffects.h  WorldPitchShifter.cpp  WorldPitchShifter.h  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
Standalone/: CMakeLists.txt  keyboard_mapping.xml
Standalone/source/: MidiInput.cpp  MidiInput.h  WasapiAudio.cpp  WasapiAudio.h  main.cpp
